--- a/MobileFork/Base.lproj/Main.storyboard
+++ b/MobileFork/Base.lproj/Main.storyboard
@@ -166,6 +166,16 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JW7-Yd-CdC" id="p6I-Qx-43p">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lhx-ph-EOU">
+                                                    <rect key="frame" x="331" y="6" width="46" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <connections>
+                                                        <segue destination="9KU-p3-EQS" kind="show" id="ksz-cm-P0J"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="5qU-OH-Ldd">
@@ -197,6 +207,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kMh-nd-yNE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2718" y="-27"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="trl-ma-OSi">
+            <objects>
+                <viewController id="9KU-p3-EQS" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KWo-Ow-x7p">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGF-SV-VWG">
+                                <rect key="frame" x="175.5" y="437.5" width="63" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PGF-SV-VWG" firstAttribute="centerY" secondItem="KWo-Ow-x7p" secondAttribute="centerY" id="a9J-Na-CB5"/>
+                            <constraint firstItem="PGF-SV-VWG" firstAttribute="centerX" secondItem="KWo-Ow-x7p" secondAttribute="centerX" id="h7L-Kq-9lq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XUg-rM-pAj"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="qXi-TC-hgX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIm-aD-b9A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3481.1594202898555" y="-31.473214285714285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="VOy-lR-d9K">
