--- a/MobileFork/Base.lproj/Main.storyboard
+++ b/MobileFork/Base.lproj/Main.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="5dd-73-eIm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="qdf-H3-Qw2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="qdf-H3-Qw2" firstAttribute="leading" secondItem="qPP-c9-H1D" secondAttribute="leading" id="Tqd-cu-WGH"/>
+                            <constraint firstItem="qdf-H3-Qw2" firstAttribute="top" secondItem="qPP-c9-H1D" secondAttribute="top" id="V6P-m8-J0U"/>
+                            <constraint firstItem="qPP-c9-H1D" firstAttribute="bottom" secondItem="qdf-H3-Qw2" secondAttribute="bottom" id="qTm-7H-JLq"/>
+                            <constraint firstItem="qPP-c9-H1D" firstAttribute="trailing" secondItem="qdf-H3-Qw2" secondAttribute="trailing" id="s7N-lx-3vs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qPP-c9-H1D"/>
                     </view>
                     <navigationItem key="navigationItem" id="gct-vA-4SR"/>
